--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="container leftContainer">
         <a href="#" class="imgContainer">
-            <img src="./assets/images/footer/logo.png" alt="#">
+            <img src="./assets/images/header/logo.svg" alt="#">
         </a>
 
         <a href="#" class="littleText">
