--- a/src/assets/scss/blocks/main.scss
+++ b/src/assets/scss/blocks/main.scss
@@ -2940,6 +2940,11 @@
             position: relative;
             z-index: 5;
             .loopSwiper {
+                .swiper-wrapper {
+                    -webkit-transition-timing-function:linear!important; 
+                    -o-transition-timing-function:linear!important;
+                    transition-timing-function:linear!important; 
+                  }
                 .swiper-slide {
                     background-color: #124BF6;
                     border: 0.1rem solid #9FF612;
@@ -3017,7 +3022,26 @@
             position: relative;
             z-index: 4;
 
-
+            .loopSwiper2 {
+                .swiper-wrapper {
+                    -webkit-transition-timing-function:linear!important; 
+                    -o-transition-timing-function:linear!important;
+                    transition-timing-function:linear!important; 
+                  }
+                .swiper-slide {
+                    background-color: #9FF612;
+                    border: 0.1rem solid #3A3A3B;
+                    border-radius: 1.2rem;
+                    width: auto;
+                    height: auto;
+                    padding: 4rem 6rem;
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: contain;
+                    }
+                }
+            }
             ul {
                 display: flex;
                 position: relative;
@@ -3049,7 +3073,26 @@
             position: relative;
             z-index: 3;
 
-
+            .loopSwiper3 {
+                .swiper-wrapper {
+                    -webkit-transition-timing-function:linear!important; 
+                    -o-transition-timing-function:linear!important;
+                    transition-timing-function:linear!important; 
+                  }
+                .swiper-slide {
+                    background-color: #3A3A3B;
+                    border: 0.1rem dashed #FFFFFF;
+                    border-radius: 1.2rem;
+                    width: auto;
+                    height: auto;
+                    padding: 4rem 6rem;
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: contain;
+                    }
+                }
+            }
             ul {
                 display: flex;
                 position: relative;
@@ -7277,6 +7320,7 @@
                         border-bottom: 0.3rem solid #9FF612;
                         border-radius: 0.6rem;
                         padding: 0.8rem;
+                        padding-left: 0.6rem;
                         display: flex;
                         padding-right: 1.2rem;
                         transition: all 0.3s linear;
