--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,7 +6,7 @@
         <div class="menuItemsHelper">
             <a href="#" class="menuItem">Возможности CRM</a>
             <a href="#" class="menuItem">Цены</a>
-            <a href="#" class="menuItem">8 800 111 33 22 </a>
+            <a href="tel:88001113322" class="menuItem">8 800 111 33 22 </a>
         </div>
         <button class="btnCall">Свяжитесь со мной</button>
         <button class="btnInit">Вход</button>
