--- a/src/assets/scss/blocks/main.scss
+++ b/src/assets/scss/blocks/main.scss
@@ -779,6 +779,16 @@
                 overflow: hidden;
                 transform: rotate(-1deg);
                 margin-right: 0.1rem;
+                .infinite-stroke-1 {
+                    .swiper-wrapper {
+                        -webkit-transition-timing-function:linear!important; 
+                        -o-transition-timing-function:linear!important;
+                        transition-timing-function:linear!important; 
+                      }
+                    .swiper-slide {
+                        width: max-content;
+                    }
+                }
                 }
 
                 .marquee {
@@ -789,23 +799,23 @@
                  
                 .marquee .marqSpan {
                 display:inline-block;
-                padding-left: 100%;
-                -webkit-animation: marquee 10s infinite linear;
-                animation: marquee 20s infinite linear;
+                // padding-left: 100%;
+                // -webkit-animation: marquee 10s infinite linear;
+                // animation: marquee 20s infinite linear;
 
                 span {
                     color: #9FF612;
                 }
                 }
                  
-                @-webkit-keyframes marquee {
-                0%{-webkit-transform: translate(0, 0);}
-                100%{-webkit-transform: translate(-100%, 0);}
-                }
-                @keyframes marquee{
-                0%{transform: translate(0, 0);}
-                100%{transform: translate(-100%, 0)}
-                }
+                // @-webkit-keyframes marquee {
+                // 0%{-webkit-transform: translate(0, 0);}
+                // 100%{-webkit-transform: translate(-100%, 0);}
+                // }
+                // @keyframes marquee{
+                // 0%{transform: translate(0, 0);}
+                // 100%{transform: translate(-100%, 0)}
+                // }
 
             .requestContainer {
 
@@ -1040,6 +1050,17 @@
                 transform: rotate(2deg);
                 margin-right: 0.1rem;
 
+                .infinite-stroke-2 {
+                    .swiper-wrapper {
+                        -webkit-transition-timing-function:linear!important; 
+                        -o-transition-timing-function:linear!important;
+                        transition-timing-function:linear!important; 
+                      }
+                    .swiper-slide {
+                        width: max-content;
+                    }
+                }
+
                 @include breakpoint($sm-bp) {
                     display: none;
                 }
@@ -1048,23 +1069,23 @@
                 .siteLineSpan {
                     
                         display:inline-block;
-                        padding-left: 100%;
-                        -webkit-animation: siteLine 10s infinite linear;
-                        animation: siteLine 20s infinite linear;
+                        // padding-left: 100%;
+                        // -webkit-animation: siteLine 10s infinite linear;
+                        // animation: siteLine 20s infinite linear;
         
                         span {
                             color: #9FF612;
                         }
                         
                          
-                        @-webkit-keyframes siteLine {
-                        0%{-webkit-transform: translate(0, 0);}
-                        100%{-webkit-transform: translate(-100%, 0);}
-                        }
-                        @keyframes siteLine{
-                        0%{transform: translate(0, 0);}
-                        100%{transform: translate(-100%, 0)}
-                        }
+                        // @-webkit-keyframes siteLine {
+                        // 0%{-webkit-transform: translate(0, 0);}
+                        // 100%{-webkit-transform: translate(-100%, 0);}
+                        // }
+                        // @keyframes siteLine{
+                        // 0%{transform: translate(0, 0);}
+                        // 100%{transform: translate(-100%, 0)}
+                        // }
                 }
 
             }
@@ -1234,26 +1255,36 @@
                 overflow: hidden;
                 transform: rotate(-2deg);
                 margin-right: 0.1rem;
+                .infinite-stroke-3 {
+                    .swiper-wrapper {
+                        -webkit-transition-timing-function:linear!important; 
+                        -o-transition-timing-function:linear!important;
+                        transition-timing-function:linear!important; 
+                      }
+                    .swiper-slide {
+                        width: max-content;
+                    }
+                }
 
                 .businessLineSpan {
                     display:inline-block;
-                        padding-left: 100%;
-                        -webkit-animation: marquee 10s infinite linear;
-                        animation: marquee 20s infinite linear;
+                        // padding-left: 100%;
+                        // -webkit-animation: marquee 10s infinite linear;
+                        // animation: marquee 20s infinite linear;
         
                         span {
                             color: #9FF612;
                         }
                         
                          
-                        @-webkit-keyframes siteLine {
-                        0%{-webkit-transform: translate(0, 0);}
-                        100%{-webkit-transform: translate(-100%, 0);}
-                        }
-                        @keyframes siteLine{
-                        0%{transform: translate(0, 0);}
-                        100%{transform: translate(-100%, 0)}
-                        }
+                        // @-webkit-keyframes siteLine {
+                        // 0%{-webkit-transform: translate(0, 0);}
+                        // 100%{-webkit-transform: translate(-100%, 0);}
+                        // }
+                        // @keyframes siteLine{
+                        // 0%{transform: translate(0, 0);}
+                        // 100%{transform: translate(-100%, 0)}
+                        // }
 
                         @include breakpoint($sm-bp) {
                             display: none;
@@ -2946,17 +2977,17 @@
                     transition-timing-function:linear!important; 
                   }
                 .swiper-slide {
-                    background-color: #124BF6;
-                    border: 0.1rem solid #9FF612;
-                    border-radius: 1.2rem;
-                    width: auto;
+                    // background-color: #124BF6;
+                    // border: 0.1rem solid #9FF612;
+                    // border-radius: 1.2rem;
+                    width: max-content;
                     height: auto;
-                    padding: 4rem 6rem;
-                    img {
-                        width: 100%;
-                        height: 100%;
-                        object-fit: contain;
-                    }
+                    // padding: 4rem 6rem;
+                    // img {
+                    //     width: 100%;
+                    //     height: 100%;
+                    //     object-fit: contain;
+                    // }
                 }
             }
             ul {
@@ -2964,18 +2995,23 @@
                 position: relative;
                 z-index: 3;
                 width: 200%;
-                animation: scroll 10s infinite linear;
+                // animation: scroll 10s infinite linear;
                 display: flex;
 
                 li {
                     background: #124BF6;
                     border-radius: 1.2rem;
                     border: 0.1rem solid #9FF612;
-                    padding: 3.5rem;
-                    width: 100%;
+                    // padding: 3.5rem;
+                    padding: 4rem 6rem;
+                    width: auto;
                     display: flex;
                     align-items: center;
-                    justify-content: center;
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: contain;
+                    }
                   }
             }
           }
