--- a/src/assets/scss/blocks/main.scss
+++ b/src/assets/scss/blocks/main.scss
@@ -1582,10 +1582,16 @@
                         margin-left: 0;
                         .swiper-wrapper {
                             align-items: center;
+                            -webkit-transition-timing-function:linear!important; 
+                            -o-transition-timing-function:linear!important;
+                            transition-timing-function:linear!important; 
                         }
                         .swiper-slide {
                             width: auto;
                             height: 3rem;
+                            display: flex;
+                            gap: 2rem;
+                            
                             img {
                                 width: 100%;
                                 height: 100%;
@@ -1927,10 +1933,15 @@
                         margin-left: 0;
                         .swiper-wrapper {
                             align-items: center;
+                            -webkit-transition-timing-function:linear!important; 
+                            -o-transition-timing-function:linear!important;
+                            transition-timing-function:linear!important; 
                         }
                         .swiper-slide {
                             width: auto;
                             height: 3rem;
+                            display: flex;
+                            gap: 2rem;
                             img {
                                 width: 100%;
                                 height: 100%;
@@ -2159,10 +2170,20 @@
                             margin-left: 0;
                             .swiper-wrapper {
                                 align-items: center;
+                                -webkit-transition-timing-function:linear!important; 
+                                -o-transition-timing-function:linear!important;
+                                transition-timing-function:linear!important;
                             }
                             .swiper-slide {
-                                width: 6rem;
-                                height: 6rem;
+                                // width: 6rem;
+                                // height: 6rem;
+                                display: flex;
+                                gap: 5rem;
+
+                                div {
+                                    width: 6rem;
+                                    height: 6rem;
+                                }
                                 a {
                                     width: 100%;
                                     height: 100%;
