--- a/src/partials/sprite.html
+++ b/src/partials/sprite.html
@@ -39,7 +39,7 @@
             </mask>
             <g mask="url(#mask0_121_12138)">
             <path d="M473.05 225.13L592.015 293.814L545.377 425.925L506.244 403.331L458.533 464.279L542.435 512.719L282.902 746.069L163.937 677.385"  stroke-width="2" stroke-linejoin="bevel"/>
-            <path d="M473.05 225.127L300.874 284.758L339.381 306.99L180.875 397.89L289.196 460.429L163.937 677.383L423.47 444.033L339.569 395.592L387.279 334.645L426.413 357.238L473.05 225.127Z"  stroke-width="2" stroke-linejoin="bevel"/>
+            <path id="whiteColor" d="M473.05 225.127L300.874 284.758L339.381 306.99L180.875 397.89L289.196 460.429L163.937 677.383L423.47 444.033L339.569 395.592L387.279 334.645L426.413 357.238L473.05 225.127Z"  stroke-width="2" stroke-linejoin="bevel"/>
             </g>
             </g>
     <symbol id="arrowRigth" viewBox="0 0 26 16">
